# groundupdb

./: .gitignore  CMakeLists.txt  README.md
groundupdb/: CMakeLists.txt  groundupdb.h  groundupdbext.h
groundupdb-cli/: CMakeLists.txt  cxxopts.hpp  main.cpp
groundupdb-tests/: CMakeLists.txt  catch.hpp  dbmanagement-tests.cpp  hashing-tests.cpp  keyvalue-tests.cpp  performance-tests.cpp  performane-tests.cpp  query-tests.cpp  tests.h
groundupdb/include/: database.h  groundupdb.h  query.h
groundupdb/include/extensions/: extdatabase.h  extquery.h  highwayhash.h
groundupdb/src/: database.cpp  filekeyvaluestore.cpp  groundupdb.cpp  highwayhash.cpp  memorykeyvaluestore.cpp  query.cpp
